@@ -28,6 +28,7 @@ DIST udev-193-patches-1.tar.bz2 1265 SHA256 03345f12afaa571ea40a234eeebbb89f065f
 DIST udev-194-patches-1.tar.bz2 1276 SHA256 ebb0d8ebc70fd23f48412f085ae2455f155a45a290853442e843635a9292eef2 SHA512 0a7a472da118513576b95cdaf6c41c2c3d938dfeef518ab5ce8af6734e0d220dd24eab3d02389849602edcee5af5536f523c22220627cd1762d828c5ccaf447a WHIRLPOOL 13f8e981a18227eea3e94464c52b569f10631e6eabc2ce0713939c9a5d58f1be9e5b382c6fad3605f4ab3310a907cf1660a9e4586a0cf5d0288559e78f197b5c
 DIST udev-gentoo-legacy-patchset-1.tar.bz2 14039 SHA256 0a82fd7a6ed4212dc26d7b562d91e9bb7174581717683d447902f308110b635a SHA512 4a64d972ab361c781ebde7f9360d7842f8be2c945fbcf526019a49194197af9f2575e5ba399d7494c84b12489fe09333bf225f697b786fb6ccef7b287e58c9cc WHIRLPOOL 70e84987aa3c5ef93d624014bd13156a95d456ade17389b2a89261f57dee32d1dd7f416dd2397c4e6e2bbc09d0fee7acde8325bdf203021f45c49adf7c6e72ba
 DIST udev-gentoo-scripts-164-v2.tar.bz2 9504 SHA256 5fff00a00da6f6bfc47e375d2a8da6679a4e1de152d9f30f16b4bc8c6d79a5ef SHA512 ead3f34a906bd18a6895029f6d5f5a771fc237d437b621151d40142376ba6fa10e408a881c7dafcd308d5c5a66766ce9db8f612f0f78899362e8b30eda4aa0c5 WHIRLPOOL 4558a8d3073a7aa79d522e459f7c212b2a97f726f67a6f9665a3e9abd3dea6b2c888d52dd716de4b53628002af354fb5de41a83cdd71fdfc853e35978c6d5db6
+DIST udev-gentoo-scripts-7.1.tar.bz2 16257 SHA256 1923768a98b7f00ffdc9bdf5a2c9982c494b978903ec891184d6fa0d10090fb4 SHA512 663fdd750b3f1e52a4c7639d0692290cdda9d202d4408e8aba9bfd38aaccfaa0acb79e303e98872b721cf109c62ac46921785cb5a373cc6ad8b428d0f5192836 WHIRLPOOL 49b600b034f8a6ad5e0ae6ca769971f1bb517fa0b9e31a0a7d0430ae67cf21bf4ab1db981d3eaaf78819d1e75a24a1f101eeb737448763b2990e38da912636be
 DIST udev-gentoo-scripts-7.tar.bz2 16248 SHA256 cef8d47fe3b023c40dde621e0c91a9d38b7e7b83de5bae53e71a9027dfc65de7 SHA512 16d37cb5f2289b789b569a799e62ab282f0667b1c47e54a325a310133212592a051242e137a02db928946278417a7745c5b17bb95d84f25ae071d71d5a4afd3b WHIRLPOOL 5b14aaad1a1771d02e3e6a78e6ecbc5122fbc48ac542f5dfc26539d2b1f64136de5633a2b9bd5bfce414fbffec12799a09bf2b29c375e033a4ea986ffc3ef878
 EBUILD udev-141-r1.ebuild 13134 SHA256 08c56c0ad429011e3096999b3fd1bf9fa4d321a7327fd955f7b20bb94dca6742 SHA512 906d40367bef8adc15639af364170bceec369ca7d96ba81638259cd4a47501126e634ea0d69d105cd2375e41fd648e535f136059a0ba87ce03ce4fdfb6086daa WHIRLPOOL 539df69166ce8a7a1f89c40b43f710092f16e0dc2c13a34e68474bedd2f166279ded5abefb5a42c3c99d03190cc07f8f495c78faaf1a508637efdc28f2efa112
 EBUILD udev-146-r1.ebuild 15397 SHA256 034726b24a1fe9cc16ffd084c8aef92c95aae66638412a12b9d95bce790a89e2 SHA512 a0a7a354782561a84f647d32e6d13642899d541391a681588ec992cc9b06f9aae740cd35ccd7a414487b31c3d614c179de49c6403b18b39f6264a93baec14ae8 WHIRLPOOL 9499f96c148a9790234ed20467f57324910bd33d95a7d38b68022e3175f7f2bc1498be4352c9d805bbb603e2866da625f9a76e35b5607e9cb9c564a8946c6191
@@ -35,6 +36,7 @@ EBUILD udev-149.ebuild 16479 SHA256 7ffa5b9e1d6793684d1f54f6d50d14d3eec3320f7a67
 EBUILD udev-151-r4.ebuild 16792 SHA256 b9821f05b54788b589b142c61149ce0e8529e58adb613cdc74ae1eb3a66d3bae SHA512 75dd32b0aba3c0cff242898fb499cb90908f392f728e4ef1103efbef0e616658828c7b5910c4e1c63aeaa844ee0667596c38ec8cc35a753c8690b06bc5a1d6e8 WHIRLPOOL fdfa2322fd5d6b1dd08a2832ef64d4c7de4205dc7281be2375fc0cb4546459c34e33d5d13e9582907dd14409490418aaef71678e76e6991b6893d5fe9aab934f
 EBUILD udev-164-r2.ebuild 15166 SHA256 5b95ac84b12592a869cd25e4d20cec86befd68d9cf8ceec6e215e5ff3fb6c268 SHA512 1abe951175d7071e4c2736e50c43ded1fa2bc733e7b15e50ee2ab0acc0a35c4072b40bcd0971f4a42b5bb92e282df50eb5918ba37ffbcb72f4fdf9161fd800cc WHIRLPOOL 910a74ff36e7635830a6958651f629b9e69dbc7677f6a332cd6d0d5ce7278fa3040fdf70461eb5ff50740aa5cd58d49687001564ca810373bb211ebf6e4fa2b2
 EBUILD udev-171-r6.ebuild 15730 SHA256 546ac267598aef8f2270b181020483a80c0e4b06822f7d96e7f32c2a1bfe2eec SHA512 55bb65cf1ec7d14dddcd604591a0bb2112777f37d7d6e29dfc527c3f4c4f00e3e47ebb7c02e014a351ffc54c55bc5cccb78bdb9caff27936932e639e6277ca9c WHIRLPOOL c6a141614965a6f446429994320d9b4fafae877614cded1a3f71187c2f05b5b5721714e2c4b304303851cf0050b3c3ab60e45cffb8f2520ff8765effb24398a2
+EBUILD udev-171-r7.ebuild 15752 SHA256 761402d907996ce17e00f87aaf64b13d92f2c1c233bf57e746744e0450f6f7cb SHA512 8d53ad36c0f4e472dbdcf92226019407645a6981257cd4558e19ca86f15689e5fc4dc5f2724661d2562459ebfa99e1da79f4d4f60ff892ce0cfbcdc304e7860e WHIRLPOOL 59e8d8b7a683aca802ba0e8143cc262afc88ae7d456884ee1726c3ce6508ebe0fed2214659e34ed2aeef52ce0a0c8a207d6da33e672101c68eaf012935a7f844
 EBUILD udev-189.ebuild 11032 SHA256 49a18eeb31611fc22416bc81319d10e40d7554c7fae24f8cdf8cdf751334e12a SHA512 c066003c803468358a58be1e370f69396614d9ecc78f2275e86e3e47f6906eca16232fe8e5800d44d9c0295b314e37602da37a140639ed1b01df664a7a77b826 WHIRLPOOL 0867dae834d126f69bb206025a2b8adae7d7f1dc43c410361353ca47a709e87b4ff6e8ef4f9893cdf229cedf9bf79ded3e12cce484f429d2b9bfa991d2d180a9
 EBUILD udev-190.ebuild 11032 SHA256 ff0a13f6fb5cefd0d4b8c19ec8419a65859179d3d7408757b2332ef38655077c SHA512 02bd90a2e0be05a87fe213e3ef8144aab5de3ba70e436078d20d0c81bfd6c18a1e8a76bf5a807a77b62d3e49284a575f04963bc3de71b38c6486b24f5b0fd1ef WHIRLPOOL 55293d6e6fd220703b7619a73d871e499378860d9259c8dc6983cf8cb7e2740d462d507c9c2cac92493c3c3690d752288f7303abea8c727ed0e62a24e1cf2bdb
 EBUILD udev-191.ebuild 11032 SHA256 f7a1e68b1d5d4b21e075e4f0475160e36abf478a91ee8ca2eb78412683919deb SHA512 02b7de416d535aa8fadd453482add6e4343e2113ea4a984e42acdc688b35e4fa76f85fa3c835d824003048a8df81e0280528605853c529182c94710f2cd3238b WHIRLPOOL 4f354a56827dda78ea90f5cebb433ffe12eb19b19783c723c961cf8f2ca3312f93d79638705ea75c46de7a32d9afc241dba4c6576cd8005d95edfc4078e6dcbe
@@ -42,13 +44,13 @@ EBUILD udev-192.ebuild 11032 SHA256 420ffcca68b32ca0ff066509e66937ad3d2f5336e8f2
 EBUILD udev-193.ebuild 11033 SHA256 6e3d701b54d1a7b685cc637aea3420770affe94b9d355e0fb7eb5db95d9b4ab2 SHA512 de0c107ad032dd077118b95ce9b2f82e5d85696e9446f5999fd923e43382fcc3b53797d27a2c99d2bb276265c95624d5f9e3055416fb8a08ad2b09b03dc063b8 WHIRLPOOL 9d0c6455ff66b1b5408fd53590326e23c242d7198840de2b6b6563c20b39f85993cb942ecf67501743e5d78031d489108250693e6d903fd99ab3b63f6b8a4c5d
 EBUILD udev-194.ebuild 11082 SHA256 8df89a558f8a06ca00b85002c34b5eae34bb30f06adef0c9cb02fd6a8b1e7521 SHA512 8b90291ba59e47e2bf26f59a2d7ead9c782c61c4f17b669cccb192297bf1070e72b948a8f444cb1dbfd5098ace6e52533f90d08af3a3bad0eff6f29676e981ae WHIRLPOOL 17501224f0594776619f891fbe3f84afb329fcda970bf57ae64adb96bdbfddccfa1eacf6eceebbcfae60372e2692a8511997ba72abad6134f60a4d2818156e82
 EBUILD udev-9999.ebuild 11084 SHA256 49c2850e6f81a3124f970af0b33047261dc83936f4afd9625149b62a0728ca1e SHA512 eb184f5aaabd75e6f387b52fb6f5bf4c571e1513fed5737eceb61a859c4a9d84a9510e82bdb970449051a8f67303ea117fb82311f0df9b2f8b3259e2cf4dc023 WHIRLPOOL 13ac40b7b28f792fc00ba6cc30742e0b192af3403ae946706f5343ae9d02501e93fc3bf797c2060ec7b69e28845c0d0bb80988d6f0c4b81f0526c99f1cacfedf
-MISC ChangeLog 41670 SHA256 5aae57dbfc1a82abee0aff9b842e82f6245d24bbac9ee72eb5d23dbf9d5180bb SHA512 faefbc2d5b865de11a8b3fa76fbfab3dcfa0041e8aa14d6d361bab4e5615065859e893ba5cb05b4c1739ec8692cf8461d2148373235758c973439292f22d3bd1 WHIRLPOOL a65a6eb0f9957bedc4535c0295f96a103b9a5e9f061547e6cdd3e1e5f3ae0225539cda02948133301600451e91ab0b17c5dc5a3821a8bcb1057a9a5ccd8f8f58
+MISC ChangeLog 41996 SHA256 244d5e0df8edf72c830fed65a573039375d5bcb6353288a989a189fef318e148 SHA512 a584eea001ea61c7e15d5b0e02d454e2ec18d8bd06ee7d48f41d0dba4747781f7f4311849ab8dcdc570ed5508416acba8671057531f63a3585e00b4d5d1201aa WHIRLPOOL 70a54826f180f349bb63360c65e05ffedd3f32436fcb5c79054e2582e8546313bdafe1dce5bcbc1ffaee79aa2c998ac82a99d30d98c8a0ec776e98917d773895
 MISC ChangeLog-2009 105929 SHA256 7a8d7123b7395dc5bbde09a8c0cee1c5110d24faf87a68a8210b0c6bdf862c1c SHA512 3b577c97224e7f85ae5fb0a0ead538f8aa83c738e6014fadaf5247f34d3863df4bc10f9d15a5e117813d081a8af1913ea41a5e60d00ed521ea0c1e5b71a91a2b WHIRLPOOL c9f527ba19e787f9973a26ed535dbf7af760c3a519f4b062cf2a8069e134a803ebe669450deace804be70619995b389529febf03e8aeb7183c3ea984c0dfdaa5
 MISC metadata.xml 1219 SHA256 0ae3dd9577e914a82f647c359681a278220520270fe4ae1a4dbd7ea0c0071945 SHA512 bab691cd1183391798ef4bb1997c995573a30213afdd2565fbf3f33c9dd7953a915e40a9a8a2963b47f8950e97707e0204f41847f891e99cac8ec0db067d7b57 WHIRLPOOL fb116da30e0c1fbd84ec8eda60d2677ed9972a2144138f4b3e6bddb11d2a38b117522417f3c7c445801bfe9461cb870560a4019df1c7fd36b646ee0ebf9a06a9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlB7eVQACgkQ/ejvha5XGaPOLwCeIqs+BiBKBwzinXb0X2YHYRAl
-7McAn3hM8Y7KDvm4TnEaEhas0fFtxUAq
-=0mDb
+iEYEAREIAAYFAlCB7aYACgkQblQW9DDEZThdOwCghm7UF0m/FMFimHcxAI2mi7Vi
+UVkAn0+RFudQ4azvgvjkXYSjwNrreslS
+=ZUR0
 -----END PGP SIGNATURE-----
